...
                    )
                  ],
                ),
                child: Column(
                  children: [
                    TextField(
                      key: Key('user_email'),
                      controller: loginController.emailController,
                      style: TextStyle(color: theme.textTheme.bodyLarge?.color),
                      decoration: InputDecoration(
                        prefixIcon: HeroIcon(HeroIcons.envelope,style: HeroIconStyle.outline, color: theme.iconTheme.color),
                        hintText: "Enter your email",
                        hintStyle: TextStyle(color: theme.hintColor),
...
                        filled: true,
                        fillColor: isDark ? Colors.grey[800] : Colors.grey.shade100,
                      ),
                    ),
                    SizedBox(height: 16),
                    TextFormField(
                      key: Key('user_password'),
                      controller: loginController.passwordController,
                      obscureText: _obsecurePassword,
                      style: TextStyle(color: theme.textTheme.bodyLarge?.color),
                      decoration: InputDecoration(
                        prefixIcon: GestureDetector(
                          onTap: () {
...
